some changes in ui

--- a/getstarted.html
+++ b/getstarted.html
@@ -184,7 +184,7 @@
               harum ducimus, modi necessitatibus voluptate.
             </p>
 
-            <div class="header__gstarted">
+            <div class="priority__anchor">
               <a href="./getstarted.html">know more</a>
             </div>
           </div>
