fixed issue in doc

--- a/getstarted.html
+++ b/getstarted.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -49,7 +50,7 @@
   <!-- properties -->
   <section class="properties">
     <div class="container">
-      <div class="title">
+      <div class="property__title">
         <p>PROPERTIES</p>
         <h2>Our selections of home.</h2>
       </div>
@@ -58,7 +59,7 @@
         <div class="cards">
           <img src="./IMG/property-riverside.png" alt="latest1" />
           <div class="cards__details">
-            <div class="property__title">
+            <div class="propcard__title">
               <h4>Riverside</h4>
               <p>New Your, USA</p>
             </div>
@@ -94,7 +95,7 @@
         <div class="cards">
           <img src="./IMG/property-resort&villas.png" alt="villas image" />
           <div class="cards__details">
-            <div class="property__title">
+            <div class="propcard__title">
               <h4>Resort and Villas</h4>
               <p>New Your, USA</p>
             </div>
@@ -130,7 +131,7 @@
         <div class="cards">
           <img src="./IMG/property-goldenriver.png" alt="golden river image" />
           <div class="cards__details">
-            <div class="property__title">
+            <div class="propcard__title">
               <h4>Golden River</h4>
               <p>New Your, USA</p>
             </div>
