done with properties section

--- a/getstarted.html
+++ b/getstarted.html
@@ -14,23 +14,25 @@
       <div class="container">
         <div class="header__wrapper">
           <div class="header__logo">
-            <img src="./IMG/logo.png" alt="This is a logo" />
+            <a href="./getstarted.html">
+              <img src="./IMG/logo.png" alt="This is a logo" />
+            </a>
           </div>
           <nav class="header__nav">
             <ul>
-              <li><a href="./home.html">Properties</a></li>
+              <li><a href="./properties.html">Properties</a></li>
               <li><a href="./about.html">About</a></li>
-              <li><a href="./services.html">Contact</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </nav>
           <div class="header__gstarted">
-            <a href="./getstarted.html">Get Started</a>
+            <a href="#">Get Started</a>
           </div>
-          <!-- <div class="toggle__menu">
+          <div class="toggle__menu">
             <span></span>
             <span></span>
             <span></span>
-          </div> -->
+          </div>
         </div>
       </div>
     </header>
@@ -240,5 +242,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./script.js"></script>
   </body>
 </html>
