minimal fix in layout

--- a/properties.html
+++ b/properties.html
@@ -42,6 +42,7 @@
         <div class="mainProperties__title">
           <h3>Our selection of homes</h3>
         </div>
+        <!-- 1st card -->
         <!-- in this section places the image and texts -->
         <div class="mainProperties__wrapper">
           <div class="mainProperties__section">
