--- a/properties.html
+++ b/properties.html
@@ -77,7 +77,7 @@
                   ipsa veritatis suscipit asperiores? Quidem, beatae facilis.
                 </p>
                 <br /><br />
-                <a class="continue__anch" href="#">Continue...</a>
+                <a class="continue__anch" href="#">Continue</a>
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
                   ipsa veritatis suscipit asperiores? Quidem, beatae facilis.
                 </p>
                 <br /><br />
-                <a class="continue__anch" href="#">Continue...</a>
+                <a class="continue__anch" href="#">Continue</a>
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
                   ipsa veritatis suscipit asperiores? Quidem, beatae facilis.
                 </p>
                 <br /><br />
-                <a class="continue__anch" href="#">Continue...</a>
+                <a class="continue__anch" href="#">Continue</a>
               </div>
             </div>
           </div>
