fix layout of properties

--- a/properties.html
+++ b/properties.html
@@ -63,21 +63,19 @@
               </div>
               <div class="mp__description">
                 <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Earum, reprehenderit ex magnam fugiat ab beatae voluptatibus
-                  numquam ullam culpa ducimus nulla nihil sunt perspiciatis
-                  corrupti expedita iste incidunt voluptatem deserunt omnis nam
-                  placeat ipsa veritatis suscipit asperiores? Quidem, beatae
-                  facilis.nulla nihil sunt perspiciatis corrupti expedita iste
-                  incidunt voluptatem deserunt omnis nam placeat ipsa veritatis
-                  suscipit asperiores? Quidem, beatae facilis.voluptatem
-                  deserunt omnis nam placeat ipsa veritatis suscipit asperiores?
-                  Quidem, beatae facilis.nulla nihil sunt perspiciatis corrupti
-                  expedita iste incidunt voluptatem deserunt omnis nam placeat
-                  ipsa veritatis suscipit asperiores? Quidem, beatae facilis.
+                  We have a wide range of properties in one of the most
+                  desirable locations, combining scenic views and convenient
+                  living. Whether you're looking for a cozy home, a spacious
+                  commercial space, or an investment property, we have something
+                  for every need. Our team is dedicated to providing expert
+                  guidance, ensuring a seamless experience throughout your real
+                  estate journey. Explore the opportunities at Riverside Real
+                  Estate today and find your perfect property in this beautiful
+                  area
                 </p>
-                <br /><br />
-                <a class="continue__anch" href="#">Continue</a>
+                <div class="anch__div">
+                  <a class="continue__anch" href="#">Continue</a>
+                </div>
               </div>
             </div>
           </div>
@@ -104,21 +102,18 @@
               </div>
               <div class="mp__description">
                 <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Earum, reprehenderit ex magnam fugiat ab beatae voluptatibus
-                  numquam ullam culpa ducimus nulla nihil sunt perspiciatis
-                  corrupti expedita iste incidunt voluptatem deserunt omnis nam
-                  placeat ipsa veritatis suscipit asperiores? Quidem, beatae
-                  facilis.nulla nihil sunt perspiciatis corrupti expedita iste
-                  incidunt voluptatem deserunt omnis nam placeat ipsa veritatis
-                  suscipit asperiores? Quidem, beatae facilis.voluptatem
-                  deserunt omnis nam placeat ipsa veritatis suscipit asperiores?
-                  Quidem, beatae facilis.nulla nihil sunt perspiciatis corrupti
-                  expedita iste incidunt voluptatem deserunt omnis nam placeat
-                  ipsa veritatis suscipit asperiores? Quidem, beatae facilis.
+                  We offers luxurious properties in stunning locations, perfect
+                  for both relaxation and investment. Whether you're seeking a
+                  private villa or a resort-style retreat, we provide a curated
+                  selection of high-end properties designed for ultimate comfort
+                  and elegance. Our expert team is here to guide you through
+                  every step of the buying process, ensuring a seamless
+                  experience. Explore our resort and villas real estate options
+                  today and discover your dream property in paradise.
                 </p>
-                <br /><br />
-                <a class="continue__anch" href="#">Continue</a>
+                <div class="anch__div">
+                  <a class="continue__anch" href="#">Continue</a>
+                </div>
               </div>
             </div>
           </div>
@@ -144,21 +139,18 @@
               </div>
               <div class="mp__description">
                 <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Earum, reprehenderit ex magnam fugiat ab beatae voluptatibus
-                  numquam ullam culpa ducimus nulla nihil sunt perspiciatis
-                  corrupti expedita iste incidunt voluptatem deserunt omnis nam
-                  placeat ipsa veritatis suscipit asperiores? Quidem, beatae
-                  facilis.nulla nihil sunt perspiciatis corrupti expedita iste
-                  incidunt voluptatem deserunt omnis nam placeat ipsa veritatis
-                  suscipit asperiores? Quidem, beatae facilis.voluptatem
-                  deserunt omnis nam placeat ipsa veritatis suscipit asperiores?
-                  Quidem, beatae facilis.nulla nihil sunt perspiciatis corrupti
-                  expedita iste incidunt voluptatem deserunt omnis nam placeat
-                  ipsa veritatis suscipit asperiores? Quidem, beatae facilis.
+                  We offers exceptional properties in prime locations, combining
+                  beauty, comfort, and value. Whether you're looking for a
+                  residential home, commercial space, or investment opportunity,
+                  our portfolio is designed to meet diverse needs. Our
+                  experienced team provides expert advice and personalized
+                  service to ensure a smooth and successful transaction. Explore
+                  Golden River Real Estate today and find the perfect property
+                  to match your lifestyle and goals.
                 </p>
-                <br /><br />
-                <a class="continue__anch" href="#">Continue</a>
+                <div class="anch__div">
+                  <a class="continue__anch" href="#">Continue</a>
+                </div>
               </div>
             </div>
           </div>
