--- a/getstarted.html
+++ b/getstarted.html
@@ -183,19 +183,15 @@
           <div class="prio__details">
             <h2>We prioritize your comfort above all else</h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Perspiciatis id illum aspernatur odio inventore est numquam totam
-              delectus esse mollitia possimus, ea assumenda molestias obcaecati
-              sint soluta necessitatibus nesciunt iure dicta. Praesentium, ipsum
-              est asperiores impedit quasi laboriosam! Blanditiis voluptates
-              maiores hic magnam consequuntur consequatur harum ducimus, modi
-              necessitatibus voluptate. Lorem ipsum dolor sit, amet consectetur
-              adipisicing elit. Perspiciatis id illum aspernatur odio inventore
-              est numquam totam delectus esse mollitia possimus, ea assumenda
-              molestias obcaecati sint soluta necessitatibus nesciunt iure
-              dicta. Praesentium, ipsum est asperiores impedit quasi laboriosam!
-              Blanditiis voluptates maiores hic magnam consequuntur consequatur
-              harum ducimus, modi necessitatibus voluptate.
+              At our core, we believe that your comfort should always come
+              first. We are dedicated to creating an environment where you can
+              feel at ease, relaxed, and well taken care of. Whether it's in the
+              details of our services, the quality of our products, or the
+              overall experience we provide, we make sure everything revolves
+              around ensuring your comfort. Your satisfaction is our ultimate
+              goal, and we constantly strive to exceed your expectations in
+              every way. Your peace of mind matters to us, and we're here to
+              make sure you feel right at home.
             </p>
 
             <div class="priority__anchor">
@@ -216,9 +212,10 @@
             <h2>Our biggest award is develop thriving communities</h2>
 
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-              illo quam fuga sint in velit eos ullam maiores doloribus
-              exercitationem!
+              "Searching for a dream home within budget, that too in Rajarhat is
+              a critical job for anybody. We knew this but still ventured into
+              it looking for something close to our heart, and a envy for
+              others. "
             </p>
 
             <h3>Mark Leon</h3>
