done real estate

--- a/properties.html
+++ b/properties.html
@@ -82,7 +82,6 @@
         </div>
 
         <!-- 2nd card -->
-        <!-- in this section places the image and texts -->
         <div class="mainProperties__wrapper">
           <div class="mainProperties__section">
             <!-- 1fr -->
@@ -119,7 +118,6 @@
           </div>
         </div>
         <!-- 3rd card -->
-        <!-- in this section places the image and texts -->
         <div class="mainProperties__wrapper">
           <div class="mainProperties__section">
             <!-- 1fr -->
@@ -157,6 +155,17 @@
         </div>
       </div>
     </section>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <p>
+            Copyright © 2025 Real Estate, designed by HM. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
