--- a/getstarted.html
+++ b/getstarted.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is real estate website" />
-    <title>Get Started</title>
+    <title>Banner</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
