real estate refractoring

--- a/banner.html
+++ b/banner.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="header__wrapper">
           <div class="header__logo">
-            <a href="./getstarted.html">
+            <a href="./banner.html">
               <img src="./IMG/logo.png" alt="This is a logo" />
             </a>
           </div>
