--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="header__wrapper">
           <div class="header__logo">
-            <a href="./getstarted.html">
+            <a href="./banner.html">
               <img src="./IMG/logo.png" alt="This is a logo" />
             </a>
           </div>
@@ -39,7 +39,7 @@
         </div>
       </div>
     </header>
-
+    <!-- contact -->
     <section class="contact">
       <div class="container">
         <div class="contact__wrapper">
@@ -109,7 +109,6 @@
         </div>
       </div>
     </section>
-
     <!-- footer -->
     <footer class="footer">
       <div class="container">
