--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </nav>
-          <div class="header__gstarted">
+          <div class="button__primary">
             <a href="#">Get Started</a>
           </div>
           <div class="toggle__menu">
@@ -56,7 +56,7 @@
               needs. Start exploring today and let us help you make your next
               real estate move a success!
 
-            <div id="about_anchor" class="properties_anchor">
+            <div id="about_anchor" class="button__primary">
                 <a href="#">Let's connect</a>
             </div>
             </p>
