--- a/banner.html
+++ b/banner.html
@@ -25,7 +25,7 @@
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </nav>
-          <div class="header__gstarted">
+          <div class="button__primary">
             <a href="#">Get Started</a>
           </div>
           <div class="toggle__menu">
@@ -83,7 +83,7 @@
               </div>
               <!-- button -->
               <div class="card_btn">
-                <div class="properties_anchor">
+                <div class="button__primary">
                   <a href="#">Get Started</a>
                 </div>
                 <div class="card__text">
@@ -119,7 +119,7 @@
               </div>
               <!-- button -->
               <div class="card_btn">
-                <div class="properties_anchor">
+                <div class="button__primary">
                   <a href="#">Get Started</a>
                 </div>
                 <div class="card__text">
@@ -158,7 +158,7 @@
               </div>
               <!-- button -->
               <div class="card_btn">
-                <div class="properties_anchor">
+                <div class="button__primary">
                   <a href="#">Get Started</a>
                 </div>
                 <div class="card__text">
