--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </nav>
-          <div class="header__gstarted">
+          <div class="button__primary">
             <a href="#">Get Started</a>
           </div>
           <div class="toggle__menu">
@@ -101,7 +101,7 @@
                 placeholder="Message"
               ></textarea>
 
-              <div id="contact__anch" class="header__gstarted">
+              <div id="contact__anch" class="button__primary">
                 <a href="#">Send Message</a>
               </div>
             </div>
