--- a/properties.html
+++ b/properties.html
@@ -24,7 +24,7 @@
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </nav>
-          <div class="header__gstarted">
+          <div class="button__primary">
             <a href="#">Get Started</a>
           </div>
           <div class="toggle__menu">
